# voquiz

./: .gitignore  example.env  main.py  pyproject.toml
.github/: render-deploy.yml
backend/: values.py
backend/src/: config.py  session.py
backend/src/api/: endpoints.py  errors.py
backend/src/api/routes/: quiz.py  start_menu.py
backend/src/models/db/: base.py
backend/src/models/schemas/pydantic_schemas/: quiz_data.py
backend/src/services/: redis.py
backend/src/utils/: data_normalization.py  serializers.py  spreadsheets.py  spreadsheets_data.py  validators.py
frontend/static/: end.css  error.css  home.css  quiz.css
frontend/templates/: end.html  error.html  home.html  quiz.html
